--- a/JspProject/src/main/webapp/resources/css/global.css
+++ b/JspProject/src/main/webapp/resources/css/global.css
@@ -1189,27 +1189,27 @@ h2.common-title {
 
 
 /* pages */
-#qualifications input {
+#certificates input {
     height: 40px;
     font-size: 14px;
     border-radius: 5px;
 }
 
-#qualifications .btn-wrapper .add-btn {
+#certificates .btn-wrapper .add-btn {
     width: 100%;
     height: 100%;
     border: none;
     background: transparent url("../img/icon/icon-plus.svg") no-repeat center;
     background-size: 80% 100%;
 }
-#qualifications .btn-wrapper .delete-btn {
+#certificates .btn-wrapper .delete-btn {
     width: 100%;
     height: 100%;
     border: none;
     background: transparent url("../img/icon/icon-minus.svg") no-repeat center;
     background-size: 70% 100%;
 }
-#qualifications .btn-wrapper {
+#certificates .btn-wrapper {
     width: 40px;
     margin-left: 10px;
 }
