--- a/JspProject/src/main/webapp/resources/css/global.css
+++ b/JspProject/src/main/webapp/resources/css/global.css
@@ -953,14 +953,22 @@ h2.common-title {
 
 
 
-/* file manager */
+/* file manager & thumbnail manager */
 .file-manager {
     display: flex;
     gap: 20px;
     width: 100%;
 }
 
-.file-manager .uploaded-file-name {
+.thumbnail-manager {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    gap: 10px;
+}
+
+.file-manager .uploaded-file-name,
+.thumbnail-manager .uploaded-thumbnail-name {
     display: flex;
     width: 100%;
     height: 60px;
@@ -994,7 +1002,8 @@ h2.common-title {
     flex: 1;
 }
 
-.file-manager .btn-remove-attached {
+.file-manager .btn-remove-attached,
+.thumbnail-manager .btn-remove-attached {
     border: none;
     width: 16px !important;
     height: 16px;
